# se-toolkit-lab-7

./: README.md  docker-compose.yml
backend/: Dockerfile
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  command_handlers.py  keyboard.py
bot/services/: __init__.py  api.py  api_client.py  llm.py  llm_client.py
wiki/: autochecker.md  bot.md  file-system.md  qwen-code-api.md
